<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Image Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings">Settings</string>

    <string name="all_provider">All</string>
    <string name="google_provider">Google</string>
    <string name="flickr_provider">Flickr</string>
    <string name="imgur_provider">imgur</string>
    <string name="duck_duck_go_provider" tools:ignore="Typos">Duck Duck Go</string>
    <string name="bing_provider">Bing</string>
    <string name="pixabay_provider">Pixabay</string>
    <string name="giphy_provider">GIPHY</string>

    <string name="search_hint">Search</string>

    <string name="search_settings">Search settings</string>

    <string name="share_image">Share image</string>
    <string name="share_link">Share link</string>
    <string name="copy_link">Copy link</string>
    <string name="download">Download</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="image_detail">Detail</string>
    <string name="view_website">Open page</string>

    <string name="text_copied_to_clipboard">Text copied "%s"</string>

    <string name="choose_app">Choose an app</string>

    <string name="downloading">Downloading "%s"</string>

    <string name="error_downloading_image">Error downloading</string>
    <string name="image_downloaded_successful">Image saved in "%s"</string>

    <string name="general">General</string>

    <string name="interface_settings">Interface settings</string>

    <string name="ask_to_exit">Ask to exit</string>
    <string name="display_an_alert_to_exit">Display an alert asking if you want to leave</string>
    <string name="back_again_to_exit">Press back again to exit</string>

    <string name="show_images_description">Show images description</string>
    <string name="display_images_description">Display description of images loaded</string>

    <string name="safe_search">Safe search</string>
    <string name="safe_search_description">Enable only not offensive images</string>

    <string name="keep_screen_on">Keep screen on</string>
    <string name="keep_screen_on_description">Keep screen on while seeing image details</string>

    <string name="about">About</string>
    <string name="about_the_app">About this app</string>

    <string name="rate_the_app">Rate us</string>
    <string name="publish_a_review">Tell your opinion about the app</string>

    <string name="share_app_message">- Image search\n\nA simple application that helps you find the best images on the Internet, and share them on social networks.\n\n%s</string>
    <string name="share_the_app">Share</string>
    <string name="share_the_app_with_your_friends">Share this app with your friends</string>

    <string name="report_a_bug">Report a bug</string>
    <string name="tell_us_about_a_crash">Tell us about a crash, a design problem, lags…</string>

    <string name="an_idea_to_improve">Help us improve</string>
    <string name="send_us_your_ideas_and_suggestions">Send suggestions and ideas</string>

    <string name="like_the_image_search">Liked this app?</string>
    <string name="send_us_your_feedback">Tell us your experiences and opinions</string>

    <string name="contact_us">Contact us</string>
    <string name="send_us_a_email">Send us a email</string>

    <string name="open_source_licenses">Open source licenses</string>

    <string name="without_connection">Without network</string>

    <string name="suggestions">Suggestions</string>
    <string name="new_bug">New bug</string>
    <string name="feedback">Feedback</string>
    <string name="contact">Contact</string>

    <string name="permission_not_granted">Permission not granted</string>

    <string name="wallpaper_changed">Wallpaper changed</string>
    <string name="error_changing_wallpaper">Error occurred changing wallpaper</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="api">API</string>

    <string name="no_results">No results</string>

</resources>