<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/all_item"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/all_provider" />

        <item
            android:id="@+id/flickr_item"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/flickr_provider" />
        <item
            android:id="@+id/cse_item"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/google_provider" />
        <item
            android:id="@+id/imgur_item"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/imgur_provider" />
        <item
            android:id="@+id/duckduckgo_item"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/duck_duck_go_provider" />

        <item
            android:id="@+id/bing_item"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/bing_provider" />

        <item
            android:id="@+id/pixabay_item"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/pixabay_provider" />

        <item
            android:id="@+id/giphy_item"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/giphy_provider" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>