<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_copy_link"
        android:orderInCategory="1"
        android:title="@string/copy_link"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share_link"
        android:orderInCategory="2"
        android:title="@string/share_link"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="3"
        android:title="@string/share_image"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_download"
        android:orderInCategory="4"
        android:title="@string/download"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_set_as_wallpaper"
        android:orderInCategory="5"
        android:title="@string/set_as_wallpaper"
        app:showAsAction="never" />

</menu>